--- a/sg/sg-domain/pom.xml
+++ b/sg/sg-domain/pom.xml
@@ -169,7 +169,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>${maven-surefire-plugin-version}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <com.sg.environment>test</com.sg.environment>
