--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -41,6 +41,7 @@
                 <javax.el-api-version>3.0.0</javax.el-api-version>
                 <javax.mail-api-version>1.5.2</javax.mail-api-version>
                 <rest-assured-version>2.3.2</rest-assured-version>
+                <mail-version>1.4.7</mail-version>
                 
                 <maven-surefire-plugin-version>2.17</maven-surefire-plugin-version>
   </properties>
