--- a/sg/sg-domain/pom.xml
+++ b/sg/sg-domain/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>javax.mail-api</artifactId>
             <version>${javax.mail-api-version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${mail-version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--validations-->
         <dependency>
             <groupId>org.hibernate</groupId>
