--- a/site/package.json
+++ b/site/package.json
@@ -10,12 +10,18 @@
     "grunt-bower-task": "0.4.0",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-compass": "1.0.1",
+    "grunt-contrib-concat": "0.5.0",
     "grunt-contrib-connect": "0.8.0",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-cssmin": "0.10.0",
+    "grunt-contrib-htmlmin": "0.3.0",
     "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-uglify": "0.5.1",
+    "grunt-filerev": "0.2.1",
     "grunt-newer": "0.7.0",
     "grunt-ng-annotate": "0.3.2",
+    "grunt-usemin": "2.4.0",
     "grunt-wiredep": "1.9.0",
-    "jshint-stylish": "0.4.0",
     "karma": "0.12.23",
     "karma-junit-reporter": "0.2.2",
     "load-grunt-tasks": "0.6.0",
