--- a/site/package.json
+++ b/site/package.json
@@ -20,11 +20,15 @@
     "grunt-contrib-uglify": "0.5.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-filerev": "0.2.1",
+    "grunt-karma": "^0.9.0",
     "grunt-newer": "0.7.0",
     "grunt-ng-annotate": "0.3.2",
     "grunt-usemin": "2.4.0",
     "grunt-wiredep": "1.9.0",
     "karma": "0.12.23",
+    "karma-chrome-launcher": "0.1.4",
+    "karma-coverage": "0.2.6",
+    "karma-jasmine": "0.1.5",
     "karma-junit-reporter": "0.2.2",
     "load-grunt-tasks": "0.6.0",
     "protractor": "1.2.0",
