--- a/site/package.json
+++ b/site/package.json
@@ -15,14 +15,16 @@
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-cssmin": "0.10.0",
     "grunt-contrib-htmlmin": "0.3.0",
-    "grunt-contrib-imagemin": "^0.8.1",
+    "grunt-contrib-imagemin": "0.8.1",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-uglify": "0.5.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-filerev": "0.2.1",
-    "grunt-karma": "^0.9.0",
+    "grunt-karma": "0.9.0",
     "grunt-newer": "0.7.0",
     "grunt-ng-annotate": "0.3.2",
+    "grunt-protractor-runner": "1.1.4",
+    "grunt-shell-spawn": "0.3.0",
     "grunt-usemin": "2.4.0",
     "grunt-wiredep": "1.9.0",
     "karma": "0.12.23",
