--- a/site/.jshintrc
+++ b/site/.jshintrc
@@ -24,6 +24,7 @@
     "beforeEach": false,
     "afterEach": false,
     "module": false,
-    "inject": false
+    "inject": false,
+    "protractor": false
   }
 }
