--- a/site/nbproject/project.properties
+++ b/site/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=app/components/version
 config.folder=${file.reference.site-config}
 file.reference.site-app=app
