Properties - one file + individual placeholders in tests

--- a/sg/sg-domain/src/test/resources/com/sg/conf/jpa.service.test.properties
+++ b/sg/sg-domain/src/test/resources/com/sg/conf/jpa.service.test.properties
@@ -1,3 +1,10 @@
+#installation
+admin.email=admin@stitchgalaxy.com
+admin.password=admin
+user.email=user@stitchgalaxy.com
+user.password=user
+
+#persistence
 jdbc.url=jdbc:hsqldb:mem:sg
 jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.username=sa
