--- a/sg/sg-rest-integ-test/src/test/resources/com/sg/conf/internal.dev.properties
+++ b/sg/sg-rest-integ-test/src/test/resources/com/sg/conf/internal.dev.properties
@@ -1,5 +1,11 @@
+#credentials
 admin.email=admin@stitchgalaxy.com
 admin.password=admin
 user.email=user@stitchgalaxy.com
 user.password=user
+
+#rest endpoint
 rest_api.base_uri=https://helical-analogy-659.appspot.com
+
+#security to generate token in test
+security.key=F55721AA6AB43C496B898D9F298A2
