Spring IO bom + correct web.xml

--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -1,82 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.sg</groupId>
-  <artifactId>sg</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.sg</groupId>
+    <artifactId>sg</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
   
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <appengine.target.version>1.9.7</appengine.target.version>
+    <parent>
+        <groupId>io.spring.platform</groupId>
+        <artifactId>platform-bom</artifactId>
+        <version>1.0.2.RELEASE</version>
+        <relativePath/>
+    </parent>
+  
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <appengine.target.version>1.9.7</appengine.target.version>
 
-                <sg-configuration-version>1.0.0-SNAPSHOT</sg-configuration-version>
-                <sg-rest-api-version>1.0.0-SNAPSHOT</sg-rest-api-version>
+        <sg-configuration-version>1.0.0-SNAPSHOT</sg-configuration-version>
+        <sg-rest-api-version>1.0.0-SNAPSHOT</sg-rest-api-version>
 
-		<spring-version>4.0.6.RELEASE</spring-version>
-                <spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
-                <spring-boot-starter-data-jpa-version>1.1.4.RELEASE</spring-boot-starter-data-jpa-version>
+        <spring-version>4.0.6.RELEASE</spring-version>
+        <spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
+        <spring-boot-starter-data-jpa-version>1.1.4.RELEASE</spring-boot-starter-data-jpa-version>
 
-		<junit-version>4.11</junit-version>
-		<joda-version>2.3</joda-version>
-		<joda-time-hibernate-version>1.3</joda-time-hibernate-version>
-		<hibernate-version>4.3.6.Final</hibernate-version>
-                <commons-dbcp-version>1.4</commons-dbcp-version>
-                <hsqldb-version>2.3.2</hsqldb-version>
-                <mysql-connector-java-version>5.1.31</mysql-connector-java-version>
-                <log4j-version>1.2.17</log4j-version>
-                <usertype.core-version>3.2.0.GA</usertype.core-version>
-                <spring-security-version>3.2.1.RELEASE</spring-security-version>
-                <jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
-                <dozer-version>5.5.1</dozer-version>
-                <hamcrest-all-version>1.3</hamcrest-all-version>
-                <mockito-core-version>1.9.5</mockito-core-version>
-                <json-path-version>0.9.1</json-path-version>
-                <commons-io-version>1.3.2</commons-io-version>
-                <jasypt-version>1.9.2</jasypt-version>
-                <orika-core-version>1.4.5</orika-core-version>
-                <commons-lang3-version>3.3.2</commons-lang3-version>
-                <hibernate-validator-version>5.1.2.Final</hibernate-validator-version>
-                <javax.el-api-version>3.0.0</javax.el-api-version>
-                <javax.mail-api-version>1.5.2</javax.mail-api-version>
-                <rest-assured-version>2.3.2</rest-assured-version>
-                <mail-version>1.4.7</mail-version>
+        <junit-version>4.11</junit-version>
+        <joda-version>2.3</joda-version>
+        <joda-time-hibernate-version>1.3</joda-time-hibernate-version>
+        <hibernate-version>4.3.6.Final</hibernate-version>
+        <commons-dbcp-version>1.4</commons-dbcp-version>
+        <hsqldb-version>2.3.2</hsqldb-version>
+        <mysql-connector-java-version>5.1.31</mysql-connector-java-version>
+        <log4j-version>1.2.17</log4j-version>
+        <usertype.core-version>3.2.0.GA</usertype.core-version>
+        <spring-security-version>3.2.1.RELEASE</spring-security-version>
+        <jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
+        <dozer-version>5.5.1</dozer-version>
+        <hamcrest-all-version>1.3</hamcrest-all-version>
+        <mockito-core-version>1.9.5</mockito-core-version>
+        <json-path-version>0.9.1</json-path-version>
+        <json-path-assert-version>0.9.1</json-path-assert-version>
+        <commons-io-version>1.3.2</commons-io-version>
+        <jasypt-version>1.9.2</jasypt-version>
+        <orika-core-version>1.4.5</orika-core-version>
+        <commons-lang3-version>3.3.2</commons-lang3-version>
+        <hibernate-validator-version>5.1.2.Final</hibernate-validator-version>
+        <javax.el-api-version>3.0.0</javax.el-api-version>
+        <javax.mail-api-version>1.5.2</javax.mail-api-version>
+        <rest-assured-version>2.3.2</rest-assured-version>
+        <mail-version>1.4.7</mail-version>
                 
-                <maven-surefire-plugin-version>2.17</maven-surefire-plugin-version>
-  </properties>
+        <maven-surefire-plugin-version>2.17</maven-surefire-plugin-version>
+    </properties>
 
-	<dependencyManagement>
-		<dependencies>
-                        <dependency>
-				<groupId>com.sg</groupId>
-				<artifactId>sg-configuration</artifactId>
-				<version>${sg-configuration-version}</version>
-			</dependency>
-                        <dependency>
-				<groupId>com.sg</groupId>
-				<artifactId>sg-rest-api</artifactId>
-				<version>${sg-rest-api-version}</version>
-                                <type>war</type>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.sg</groupId>
+                <artifactId>sg-configuration</artifactId>
+                <version>${sg-configuration-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sg</groupId>
+                <artifactId>sg-rest-api</artifactId>
+                <version>${sg-rest-api-version}</version>
+                <type>war</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
-  <build>
-      <pluginManagement>
-          <plugins>
-              <plugin>
-                  <groupId>com.google.appengine</groupId>
-                  <artifactId>appengine-maven-plugin</artifactId>
-                  <version>${appengine.target.version}</version>
-              </plugin>
-          </plugins>
-      </pluginManagement>
-  </build>
-  <modules>
-    <module>sg-configuration</module>
-    <module>sg-ear</module>
-    <module>sg-rest-api</module>
-    <module>sg-rest-integ-test</module>
-  </modules>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.google.appengine</groupId>
+                    <artifactId>appengine-maven-plugin</artifactId>
+                    <version>${appengine.target.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <modules>
+        <module>sg-configuration</module>
+        <module>sg-ear</module>
+        <module>sg-rest-api</module>
+        <module>sg-rest-integ-test</module>
+    </modules>
 </project>
