--- a/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/sg/sg-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE web-app PUBLIC
- "-//Oracle Corporation//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+ 
     <!-- Java based root context configuration -->
     <context-param>
         <param-name>contextClass</param-name>
@@ -38,7 +37,7 @@
 
     
     <!-- Log request filter -->
-<!--    <filter>
+    <!--    <filter>
         <filter-name>logRequestFilter</filter-name>
         <filter-class>com.sg.sg_rest_api.filters.LoggerFilter</filter-class>
     </filter>
@@ -47,7 +46,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>-->
     <!-- CORS filter -->
-<!--    <filter>
+    <!--    <filter>
         <filter-name>corsFilter</filter-name>
         <filter-class>com.sg.sg_rest_api.filters.CorsFilter</filter-class>
     </filter>
