--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -18,41 +18,21 @@
         <appengine.target.version>1.9.7</appengine.target.version>
 
         <sg.rest.api.version>1.0.0-SNAPSHOT</sg.rest.api.version>
-
-        <spring-version>4.0.6.RELEASE</spring-version>
-        <spring-data-jpa-version>1.6.1.RELEASE</spring-data-jpa-version>
-        <spring-boot-starter-data-jpa-version>1.1.4.RELEASE</spring-boot-starter-data-jpa-version>
-
-
-        <!--json-path-assert currently not in bom: when upgrade bom version check json path version-->
-        <json-path-version>0.9.1</json-path-version>
-
-        <junit-version>4.11</junit-version>
-        <joda-version>2.3</joda-version>
-        <joda-time-hibernate-version>1.3</joda-time-hibernate-version>
-        <hibernate-version>4.3.6.Final</hibernate-version>
-        <commons-dbcp-version>1.4</commons-dbcp-version>
-        <hsqldb-version>2.3.2</hsqldb-version>
-        <mysql-connector-java-version>5.1.31</mysql-connector-java-version>
-        <log4j-version>1.2.17</log4j-version>
-        <usertype.core-version>3.2.0.GA</usertype.core-version>
-        <spring-security-version>3.2.1.RELEASE</spring-security-version>
-        <jackson-mapper-asl-version>1.9.13</jackson-mapper-asl-version>
-        <dozer-version>5.5.1</dozer-version>
-        <hamcrest-all-version>1.3</hamcrest-all-version>
-        <mockito-core-version>1.9.5</mockito-core-version>
         
-        <json-path-assert-version>0.9.1</json-path-assert-version>
-        <commons-io-version>1.3.2</commons-io-version>
-        <jasypt-version>1.9.2</jasypt-version>
         <orika-core-version>1.4.5</orika-core-version>
-        <commons-lang3-version>3.3.2</commons-lang3-version>
-        <hibernate-validator-version>5.1.2.Final</hibernate-validator-version>
-        <javax.el-api-version>3.0.0</javax.el-api-version>
-        <javax.mail-api-version>1.5.2</javax.mail-api-version>
         <rest-assured-version>2.3.2</rest-assured-version>
-        <mail-version>1.4.7</mail-version>
-                
+        
+        <!--???-->
+        <hibernate-jpa-2.1-api-version>1.0.0.Final</hibernate-jpa-2.1-api-version>
+        <!--Not included into SPRING.IO bom-->
+        <json-path-version>0.9.1</json-path-version>
+        <!--rename-->
+        <usertype.core-version>3.2.0.GA</usertype.core-version>
+        <!--logging filter-only GAE-->
+        <commons-io-version>1.3.2</commons-io-version>
+        <!--encryption: get rid with JWT-->
+        <jasypt-version>1.9.2</jasypt-version>
+        
         <maven-surefire-plugin-version>2.17</maven-surefire-plugin-version>
     </properties>
 
