--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -46,6 +46,11 @@
             </dependency>
             <dependency>
                 <groupId>com.sg.rest</groupId>
+                <artifactId>authtoken</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sg.rest</groupId>
                 <artifactId>dto</artifactId>
                 <version>${project.version}</version>
             </dependency>
