--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -66,6 +66,11 @@
             </dependency>
             <dependency>
                 <groupId>com.sg.rest</groupId>
+                <artifactId>domain-jpa</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sg.rest</groupId>
                 <artifactId>ear</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -100,6 +105,7 @@
         <module>dto</module>
         <module>enum</module>
         <module>domain</module>
+        <module>domain-jpa</module>
         <module>ear</module>
         <module>rest-api</module>
         <module>rest-integ-test</module>
