--- a/sg/dto/pom.xml
+++ b/sg/dto/pom.xml
@@ -50,5 +50,11 @@
             <version>${el-impl-version}</version>
             <scope>runtime</scope>
         </dependency>
+        <!--test-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
